# blockchain-indexer-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
compose/: docker-compose.yml
src/ai_collector/: Dockerfile  main.py
src/blockchain_ingestor/: block_listener.py  contract_reader.py  ethereum_client.py  event_builder.py  logs_listener.py  main.py  test_endpoints.py
src/decoder/: Dockerfile  main.py
src/decoder/src/shared/: events.py
src/ingestor/: Dockerfile  event_builder.py  logs_listener.py  main.py  test_endpoints.py
src/normalizer/: Dockerfile  main.py
src/shared/: abimanager.py
src/sink/: main.py
src/tests/: test_block_listener.py  test_ethereum_client.py  test_event_builder.py
